--- a/Tools/Scripts/Scripts.csproj
+++ b/Tools/Scripts/Scripts.csproj
@@ -93,13 +93,19 @@
     <Content Include="DaxifApp\Delegate.Daxif.xml" />
     <Content Include="DaxifApp\FSharp.Core.dll" />
     <Content Include="DaxifApp\Microsoft.ApplicationInsights.dll" />
+    <Content Include="DaxifApp\Microsoft.Azure.KeyVault.dll" />
+    <Content Include="DaxifApp\Microsoft.Azure.KeyVault.WebKey.dll" />
+    <Content Include="DaxifApp\Microsoft.Azure.Services.AppAuthentication.dll" />
     <Content Include="DaxifApp\Microsoft.Bcl.AsyncInterfaces.dll" />
     <Content Include="DaxifApp\Microsoft.Bcl.AsyncInterfaces.xml" />
     <Content Include="DaxifApp\Microsoft.Crm.Sdk.Proxy.dll" />
     <Content Include="DaxifApp\Microsoft.IdentityModel.Clients.ActiveDirectory.dll" />
     <Content Include="DaxifApp\Microsoft.IdentityModel.Clients.ActiveDirectory.Platform.dll" />
+    <Content Include="DaxifApp\Microsoft.IdentityModel.Clients.ActiveDirectory.xml" />
     <Content Include="DaxifApp\Microsoft.PowerApps.AppInsights.BatchedTelemetry.dll" />
     <Content Include="DaxifApp\Microsoft.PowerApps.AppInsights.BatchedTelemetryChannel.dll" />
+    <Content Include="DaxifApp\Microsoft.Rest.ClientRuntime.Azure.dll" />
+    <Content Include="DaxifApp\Microsoft.Rest.ClientRuntime.Azure.xml" />
     <Content Include="DaxifApp\Microsoft.Rest.ClientRuntime.dll" />
     <Content Include="DaxifApp\Microsoft.Win32.Primitives.dll" />
     <Content Include="DaxifApp\Microsoft.Xrm.Sdk.Deployment.dll" />
