--- a/Xrm.Runner/packages.config
+++ b/Xrm.Runner/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CCP" version="1.5.0" targetFramework="net462" />
-  <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net462" />
+  <package id="HtmlAgilityPack" version="1.11.66" targetFramework="net462" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.51" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.56" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.34" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.42" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.1.45" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.9" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.56" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.1.65" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.3.0" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net462" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net462" />
@@ -15,15 +15,15 @@
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
   <package id="NLog" version="4.7.15" targetFramework="net462" />
-  <package id="NLog.Config" version="4.7.10" targetFramework="net462" />
-  <package id="NLog.Schema" version="4.7.10" targetFramework="net462" />
+  <package id="NLog.Config" version="4.7.15" targetFramework="net462" />
+  <package id="NLog.Schema" version="4.7.15" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
   <package id="System.Console" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net462" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net462" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
@@ -35,7 +35,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net462" />
@@ -57,11 +57,13 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
+  <package id="System.ServiceModel.Http" version="4.10.3" targetFramework="net462" />
+  <package id="System.ServiceModel.Primitives" version="4.10.3" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net462" />
   <package id="System.Text.Json" version="6.0.8" targetFramework="net462" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net462" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
