--- a/Xrm.UnitTests/app.config
+++ b/Xrm.UnitTests/app.config
@@ -53,6 +53,38 @@
  
           </dependentAssembly>
  
+          <dependentAssembly>
+ 
+              <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+ 
+              <bindingRedirect oldVersion="0.0.0.0-8.0.0.1" newVersion="8.0.0.1" />
+ 
+          </dependentAssembly>
+ 
+          <dependentAssembly>
+ 
+              <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+ 
+              <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
+ 
+          </dependentAssembly>
+ 
+          <dependentAssembly>
+ 
+              <assemblyIdentity name="Microsoft.IdentityModel.Clients.ActiveDirectory" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+ 
+              <bindingRedirect oldVersion="0.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
+ 
+          </dependentAssembly>
+ 
+          <dependentAssembly>
+ 
+              <assemblyIdentity name="Microsoft.ApplicationInsights" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+ 
+              <bindingRedirect oldVersion="0.0.0.0-2.22.0.997" newVersion="2.22.0.997" />
+ 
+          </dependentAssembly>
+ 
       </assemblyBinding>
  
   </runtime>
