--- a/Xrm.UnitTests/packages.config
+++ b/Xrm.UnitTests/packages.config
@@ -1,15 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FakeItEasy" version="3.2.0" targetFramework="net462" />
-  <package id="FakeXrmEasy.9" version="1.55.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights" version="2.21.0" targetFramework="net462" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net462" />
+  <package id="FakeItEasy" version="6.0.0" targetFramework="net462" />
+  <package id="FakeXrmEasy.9" version="1.58.1" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights" version="2.22.0" targetFramework="net462" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.52" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.56" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.34" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.52" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.1.45" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.56" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.1.65" targetFramework="net462" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.3.0" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net462" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net462" />
   <package id="Microsoft.Testing.Extensions.Telemetry" version="1.0.2" targetFramework="net462" />
   <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="1.0.2" targetFramework="net462" />
@@ -23,11 +26,19 @@
   <package id="NuGet.Frameworks" version="5.11.3" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net462" />
-  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net462" />
   <package id="System.Memory" version="4.5.5" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
+  <package id="System.Private.Uri" version="4.3.2" targetFramework="net462" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
+  <package id="System.ServiceModel.Http" version="4.10.3" targetFramework="net462" />
+  <package id="System.ServiceModel.Primitives" version="4.10.3" targetFramework="net462" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net462" />
   <package id="System.Text.Json" version="6.0.8" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
